# CowsEpidemicSimulator

./: CMakeLists.txt  createHeatMap.R  gnuplot-iostream.h  inputData1  main.cpp
data/: Data1_1  Data1_2  Data1_3  Data1_4  Data2_1  Data2_2  Data2_3  Data2_4  Data3_1  Data3_2  Data3_3  Data3_4  Data4_1  Data4_2  Data4_3  Data4_4  Data5_1  Data5_2  Data5_3  Data5_4
